--- a/css/scss/generic/_variables.scss
+++ b/css/scss/generic/_variables.scss
@@ -3,11 +3,12 @@
 \*------------------------------------*/
 
 // colors
-$link : #777777;
+$link : #012778;
 $active-nav : #edf3ff;
 
 $emory-blue : #002878;
 $medium-blue : #3d5c99;
+$link-blue: #666699;
 $light-blue : #00dbff;
 $red : #cc3114;
 $burgundy : #B12734;
