Nav comment - test

--- a/css/scss/objects/_nav.scss
+++ b/css/scss/objects/_nav.scss
@@ -1,5 +1,5 @@
 /*------------------------------------*\
-    $NAVIGATION
+    $NAVIGATION - Lindsay added something to this scss file
 \*------------------------------------*/
 
 // navigation specific variables
@@ -9,6 +9,7 @@ $primary-expanded-but-small-nav-size: 0.75;
 $secondary-nav-font-size: 0.875em;
 
 // toggle navigation
+// Lindsay's comment here
 .toggles {
 	font-family: $font-secondary;
 	padding: 0;
