Nav uncomment take 2

--- a/css/scss/objects/_nav.scss
+++ b/css/scss/objects/_nav.scss
@@ -1,5 +1,5 @@
 /*------------------------------------*\
-    $NAVIGATION - Lindsay added something to this scss file
+    $NAVIGATION
 \*------------------------------------*/
 
 // navigation specific variables
