--- a/css/style.css
+++ b/css/style.css
@@ -1026,7 +1026,7 @@ a.emory-logo {
   .unit-signature {
     max-width: 125px; } }
 /*------------------------------------*\
-    $NAVIGATION - Lindsay added something to this scss file
+    $NAVIGATION
 \*------------------------------------*/
 .toggles {
   font-family: "Open Sans", Verdana, Arial, sans-serif;
