Removing float on navbar-toggle
Test

--- a/css/scss/objects/_nav.scss
+++ b/css/scss/objects/_nav.scss
@@ -724,6 +724,7 @@ nav#sub-nav {
 			border: solid 1px #CCC;
 			margin: 0;
 			height: 50px;
+			float:left;
 			.fa {
 				display: inline-block;
 				padding-right: 1em;
