--- a/css/style.css
+++ b/css/style.css
@@ -1429,7 +1429,8 @@ nav#sub-nav {
     text-align: center;
     border: solid 1px #CCC;
     margin: 0;
-    height: 50px; }
+    height: 50px;
+    float: left; }
     nav.nav-primary .navbar-toggle .fa {
       display: inline-block;
       padding-right: 1em; }
@@ -1438,7 +1439,6 @@ nav#sub-nav {
     border: 1px solid #ccc;
     border-radius: 4px;
     color: black !important;
-    font-size: 1em;
     height: 50px;
     padding: 0 1em;
     margin: 0; }
