--- a/css/scss/objects/_nav.scss
+++ b/css/scss/objects/_nav.scss
@@ -14,6 +14,11 @@ $secondary-nav-font-size: 0.875em;
 .input-group-btn {
 			font-size: inherit;
 		} 
+
+.hidden-smallest {
+    display: none !important;
+  }
+  
 .toggles {
 	font-family: $font-secondary;
 	padding: 0;
