Nav > UL display change

--- a/css/scss/objects/_nav.scss
+++ b/css/scss/objects/_nav.scss
@@ -88,7 +88,7 @@ nav {
 		margin: 0;
 		padding: 0;
 		width: 100%;
-		display: none;
+		//display: none;
 	}
 	.search-form {
 		margin: 0 $pad-half $pad $pad-half;
