--- a/css/style.css
+++ b/css/style.css
@@ -1088,8 +1088,7 @@ nav {
     list-style: none outside none;
     margin: 0;
     padding: 0;
-    width: 100%;
-    display: none; }
+    width: 100%; }
   nav .search-form {
     margin: 0 0.5em 1em 0.5em;
     padding: 0;
