--- a/css/scss/objects/_nav.scss
+++ b/css/scss/objects/_nav.scss
@@ -88,7 +88,7 @@ nav {
 		margin: 0;
 		padding: 0;
 		width: 100%;
-		//display: none;
+		display: none;
 	}
 	.search-form {
 		margin: 0 $pad-half $pad $pad-half;
@@ -755,6 +755,14 @@ nav#sub-nav {
 				font-size: 1em;
 				font-weight: normal;
 			}
+		}
+	}
+
+	main {
+		div.container {
+
+		div.col-sm-3 {display:table-footer-group;}
+		div.col-sm-9 {display:table-row;}
 		}
 	}
 }
