--- a/css/style.css
+++ b/css/style.css
@@ -1088,7 +1088,8 @@ nav {
     list-style: none outside none;
     margin: 0;
     padding: 0;
-    width: 100%; }
+    width: 100%;
+    display: none; }
   nav .search-form {
     margin: 0 0.5em 1em 0.5em;
     padding: 0;
@@ -1448,7 +1449,12 @@ nav#sub-nav {
       display: inline-block !important;
       color: #333;
       font-size: 1em;
-      font-weight: normal; } }
+      font-weight: normal; }
+
+  main div.container div.col-sm-3 {
+    display: table-footer-group; }
+  main div.container div.col-sm-9 {
+    display: table-row; } }
 @media all and (min-width: 62em) and (max-width: 75em) {
   .nav-search-wrap nav.nav-primary a {
     padding: 0 .nav-search-wrap nav.nav-primary a pad;
