Re-Removing Alumni and Giving

--- a/css/scss/objects/_nav.scss
+++ b/css/scss/objects/_nav.scss
@@ -762,6 +762,11 @@ nav#sub-nav {
 
 		div.col-sm-3 {display:table-footer-group;}
 		div.col-sm-9 {display:table-row;}
+
+		nav.nav-secondary {
+		ul
+		{display:none;}
+		}
 		
 }
 
